force-app/main/default/objects/Contact/fields/BERs__c.field-meta.xml
<CustomField>
    <fullName>BERs__c</fullName>
    <description>Ce champ regroupe les BERs associés au compte</description>
    <formula>Account.BERs__c</formula>
    <inlineHelpText>Ce champ regroupe les BERs associés au compte</inlineHelpText>
    <label>BERs</label>
    <type>Text</type>
</CustomField>