force-app/main/default/objects/Contact/fields/Code_BER2__c.field-meta.xml
<CustomField>
    <fullName>Code_BER2__c</fullName>
    <formula>Account.BERs__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Code BER</label>
    <type>Text</type>
</CustomField>