force-app/main/default/objects/Contact/fields/Code_BER__c.field-meta.xml
<CustomField>
    <fullName>Code_BER__c</fullName>
    <label>Code BER</label>
    <length>80</length>
    <type>Text</type>
</CustomField>