force-app/main/default/objects/Contact/fields/Code_Vendeur_2__c.field-meta.xml
<CustomField>
    <fullName>Code_Vendeur_2__c</fullName>
    <formula>IF(BEGINS( Account.Numero_client__c,&quot;160&quot;), Account.Numero_client__c, &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Code Vendeur</label>
    <type>Text</type>
</CustomField>