force-app/main/default/objects/Contact/fields/Code_vendeur__c.field-meta.xml
<CustomField>
    <fullName>Code_vendeur__c</fullName>
    <label>Code vendeur</label>
    <length>80</length>
    <type>Text</type>
</CustomField>