force-app/main/default/objects/Contact/fields/DU_Birthdate__c.field-meta.xml
<CustomField>
    <fullName>DU_Birthdate__c</fullName>
    <description>CDM: This custom field is used to store the Birthdate of the Contact. This is needed as Salesforce Standard Birthdate fields cannot be encrypted with Shield and they contain protected information.
Availability 1.6.0.24</description>
    <inlineHelpText>Please enter the Birthdate of the Contact into this field.</inlineHelpText>
    <label>Birthdate</label>
    <type>Date</type>
</CustomField>