force-app/main/default/objects/Contact/fields/DU_BusinessPartnerID__c.field-meta.xml
<CustomField>
    <fullName>DU_BusinessPartnerID__c</fullName>
    <description>CDM: Stores the Business Partner ID of the customer which refers to the unique external ID of said customer (e.g., ZGP number).</description>
    <formula>Account.DU_BusinessPartnerID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Stores the Business Partner ID of the customer which refers to the unique external ID of said customer (e.g., ZGP number).</inlineHelpText>
    <label>Business Partner ID</label>
    <type>Text</type>
</CustomField>