force-app/main/default/objects/Contact/fields/DU_ConsentPendingUpdateBatchRan__c.field-meta.xml
<CustomField>
    <fullName>DU_ConsentPendingUpdateBatchRan__c</fullName>
    <defaultValue>false</defaultValue>
    <description>CDM: true if a batch notifying the master consent system about a consent update has already ran. To be evaluated together with DU_MasterConsentSystemPendingUpdate__c.</description>
    <inlineHelpText>true if a batch notifying the master consent system about a consent update has already ran. To be evaluated together with DU_MasterConsentSystemPendingUpdate__c.</inlineHelpText>
    <label>Consent Pending Update Batch Ran</label>
    <type>Checkbox</type>
</CustomField>