force-app/main/default/objects/Contact/fields/DU_DPStatus__c.field-meta.xml
<CustomField>
    <fullName>DU_DPStatus__c</fullName>
    <description>CDM: Stores the data processing status value from Customer Master Data System and will be used to hide the records from various user roles.</description>
    <inlineHelpText>Stores the data processing status value from Customer Master Data System and will be used to hide the records from various user roles.</inlineHelpText>
    <label>DP Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unrestricted</fullName>
            </value>
            <value>
                <fullName>RestrictedProcessing</fullName>
            </value>
            <value>
                <fullName>LockedForDeletion</fullName>
            </value>
            <value>
                <fullName>Deleted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>