force-app/main/default/objects/Contact/fields/DU_EMailVerified__c.field-meta.xml
<CustomField>
    <fullName>DU_EMailVerified__c</fullName>
    <description>CDM: Indicates if the email is verified by BFF/Journey (via an external provider or the customer)</description>
    <inlineHelpText>Indication of verified/unverified E-Mail</inlineHelpText>
    <label>E-Mail Verified</label>
    <type>Date</type>
</CustomField>