force-app/main/default/objects/Contact/fields/DU_MaritalStatus__c.field-meta.xml
<CustomField>
    <fullName>DU_MaritalStatus__c</fullName>
    <description>CDM: Holds the state of being married or not married.</description>
    <inlineHelpText>Holds the state of being married or not married.</inlineHelpText>
    <label>Marital Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Civil Partnership</fullName>
            </value>
            <value>
                <fullName>Divorced</fullName>
            </value>
            <value>
                <fullName>Living Together</fullName>
            </value>
            <value>
                <fullName>Married</fullName>
            </value>
            <value>
                <fullName>Married Same Gender</fullName>
            </value>
            <value>
                <fullName>Separated</fullName>
            </value>
            <value>
                <fullName>Single</fullName>
            </value>
            <value>
                <fullName>Widowed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>