force-app/main/default/objects/Contact/fields/DU_MobileVerified__c.field-meta.xml
<CustomField>
    <fullName>DU_MobileVerified__c</fullName>
    <description>CDM: Indicates if the mobile number is verified by BFF/Journey (via an external provider or the customer)</description>
    <inlineHelpText>Indication of verified/unverified Mobile Number</inlineHelpText>
    <label>Mobile Verified</label>
    <type>Date</type>
</CustomField>