force-app/main/default/objects/Contact/fields/DU_PreferredCommunicationChannel__c.field-meta.xml
<CustomField>
    <fullName>DU_PreferredCommunicationChannel__c</fullName>
    <description>CDM: Indicates the contacts preferred contact channel.</description>
    <label>Preferred Communication Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Mobile</fullName>
            </value>
            <value>
                <fullName>Mail</fullName>
            </value>
            <value>
                <fullName>SMS</fullName>
            </value>
            <value>
                <fullName>WhatsApp</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>