force-app/main/default/objects/Contact/fields/DU_Role__c.field-meta.xml
<CustomField>
    <fullName>DU_Role__c</fullName>
    <description>CDM: Stores the business function of the contact in the context of the relationship. Available for B2B Customers and Dealers.
Availability: 1.6.0.13</description>
    <inlineHelpText>Stores the business function of the contact in the context of the relationship. Available for B2B Customers and Dealers.</inlineHelpText>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fleet Manager</fullName>
            </value>
            <value>
                <fullName>Driver</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>