force-app/main/default/objects/Contact/fields/DU_UnencryptedCommunicationAllowed__c.field-meta.xml
<CustomField>
    <fullName>DU_UnencryptedCommunicationAllowed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Shows information on whether or not unencrypted email communication is allowed towards the customer. In Germany there are laws which prohibit unencrypted emails which contain personal information (e.g. email address) unless the customer gave his permission.</description>
    <label>Unencrypted Communication Allowed</label>
    <type>Checkbox</type>
</CustomField>