force-app/main/default/objects/Contact/fields/EKIPID__c.field-meta.xml
<CustomField>
    <fullName>EKIPID__c</fullName>
    <description>Id dans backoffice EKIP</description>
    <externalId>true</externalId>
    <label>EKIPID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>