force-app/main/default/objects/Contact/fields/Fonction__c.field-meta.xml
<CustomField>
    <fullName>Fonction__c</fullName>
    <description>&quot;Métier du contact identifié -  
A choisir parmi les données de la liste de sélection&quot;</description>
    <label>Fonction</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Chef des ventes</fullName>
            </value>
            <value>
                <fullName>Comptable</fullName>
            </value>
            <value>
                <fullName>Conducteur</fullName>
            </value>
            <value>
                <fullName>Contact externe au client</fullName>
            </value>
            <value>
                <fullName>DAF</fullName>
            </value>
            <value>
                <fullName>Directeur des Activités Financières</fullName>
            </value>
            <value>
                <fullName>Dirigeant SOC</fullName>
            </value>
            <value>
                <fullName>Employé</fullName>
            </value>
            <value>
                <fullName>Finance Manager</fullName>
            </value>
            <value>
                <fullName>Fleeter</fullName>
            </value>
            <value>
                <fullName>Gérant/Dirigeant/Associé</fullName>
            </value>
            <value>
                <fullName>Gestionnaire de parc</fullName>
            </value>
            <value>
                <fullName>Secrétaire Commerciale</fullName>
            </value>
            <value>
                <fullName>Vendeur</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>