force-app/main/default/objects/Contact/fields/IsActif__c.field-meta.xml
<CustomField>
    <fullName>IsActif__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Actif</label>
    <type>Checkbox</type>
</CustomField>