force-app/main/default/objects/Contact/fields/IsDecisionnaire__c.field-meta.xml
<CustomField>
    <fullName>IsDecisionnaire__c</fullName>
    <defaultValue>false</defaultValue>
    <description>A cocher si le contact est décisionnaire</description>
    <label>Décisionnaire</label>
    <type>Checkbox</type>
</CustomField>