force-app/main/default/objects/Contact/fields/IsPrescripteur__c.field-meta.xml
<CustomField>
    <fullName>IsPrescripteur__c</fullName>
    <defaultValue>false</defaultValue>
    <description>A cocher si le contact est prescripteur</description>
    <label>Prescripteur</label>
    <type>Checkbox</type>
</CustomField>