force-app/main/default/objects/Contact/fields/Jalon_du_contact__c.field-meta.xml
<CustomField>
    <fullName>Jalon_du_contact__c</fullName>
    <description>Jalon sur KSIOP &gt; voir les données sur liste de sélection</description>
    <label>Jalon du contact</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Actif</fullName>
            </value>
            <value>
                <fullName>Inactif</fullName>
            </value>
            <value>
                <fullName>Décédé</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>