force-app/main/default/objects/Contact/fields/Nom_de_naissance__c.field-meta.xml
<CustomField>
    <fullName>Nom_de_naissance__c</fullName>
    <label>Nom de naissance</label>
    <length>255</length>
    <type>Text</type>
</CustomField>