force-app/main/default/objects/Contact/fields/OptinCourrier__c.field-meta.xml
<CustomField>
    <fullName>OptinCourrier__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Optin Courrier</label>
    <type>Checkbox</type>
</CustomField>