force-app/main/default/objects/Contact/fields/OptinEmail__c.field-meta.xml
<CustomField>
    <fullName>OptinEmail__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Optin Email</label>
    <type>Checkbox</type>
</CustomField>