force-app/main/default/objects/Contact/fields/OptinQuestionnaireSatisfaction__c.field-meta.xml
<CustomField>
    <fullName>OptinQuestionnaireSatisfaction__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Si la case est coché, elle permettra au contact de recevoir l&apos;enquête de satisfaction.</inlineHelpText>
    <label>Opt-in Questionnaire Satisfaction</label>
    <type>Checkbox</type>
</CustomField>