force-app/main/default/objects/Contact/fields/OptinSMS__c.field-meta.xml
<CustomField>
    <fullName>OptinSMS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Optin SMS</label>
    <type>Checkbox</type>
</CustomField>