force-app/main/default/objects/Contact/fields/RecordTypeName__c.field-meta.xml
<CustomField>
    <fullName>RecordTypeName__c</fullName>
    <description>Type du contact</description>
    <formula>RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type d&apos;enregistrement</label>
    <type>Text</type>
</CustomField>