force-app/main/default/objects/Contact/fields/Role_contact_client__c.field-meta.xml
<CustomField>
    <fullName>Role_contact_client__c</fullName>
    <label>Rôle contact client</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Coemprunteur</fullName>
            </value>
            <value>
                <fullName>Client</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>