force-app/main/default/objects/Contact/fields/Role_contact_partenaire_reseau__c.field-meta.xml
<CustomField>
    <fullName>Role_contact_partenaire_reseau__c</fullName>
    <description>Rôle du contact en concessions -  A choisir parmi les données de la liste de sélection</description>
    <label>Role contact partenaire/réseau</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Chef de parc</fullName>
            </value>
            <value>
                <fullName>Chef des ventes</fullName>
            </value>
            <value>
                <fullName>Secrétaire commercial</fullName>
            </value>
            <value>
                <fullName>Vendeur</fullName>
            </value>
            <value>
                <fullName>Comptable</fullName>
            </value>
            <value>
                <fullName>DAF</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>