force-app/main/default/objects/Contact/fields/SecretBancaireClient__c.field-meta.xml
<CustomField>
    <fullName>SecretBancaireClient__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Secret Bancaire Client</label>
    <type>Checkbox</type>
</CustomField>