force-app/main/default/objects/Contact/fields/SurveyUnsubscribeURL__c.field-meta.xml
<CustomField>
    <fullName>SurveyUnsubscribeURL__c</fullName>
    <description>URL désabonnement Questionnaire de satisfaction</description>
    <formula>$CustomMetadata.Constantes__mdt.FR_Public_community_url.TextValue__c&amp;&quot;unsubscribe?a=&quot;&amp; UID__c</formula>
    <label>URL désabonement QS</label>
    <type>Text</type>
</CustomField>