force-app/main/default/objects/Contact/fields/UID__c.field-meta.xml
<CustomField>
    <fullName>UID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>UID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>