force-app/main/default/objects/Contact/recordTypes/Contact_Client.recordType-meta.xml
<RecordType>
    <fullName>Contact_Client</fullName>
    <active>true</active>
    <label>Contact Client</label>
</RecordType>