force-app/main/default/objects/Contact/recordTypes/Contact_Partenaire_Reseau.recordType-meta.xml
<RecordType>
    <fullName>Contact_Partenaire_Reseau</fullName>
    <active>true</active>
    <label>Contact Partenaire/Réseau</label>
</RecordType>