force-app/main/default/objects/Contact/validationRules/DU_AllowRolesPerAccountRecordType.validationRule-meta.xml
<ValidationRule>
    <fullName>DU_AllowRolesPerAccountRecordType</fullName>
    <active>true</active>
    <errorConditionFormula>((ISPICKVAL(DU_Role__c, &quot;Fleet Manager&quot;) || ISPICKVAL(DU_Role__c, &quot;Driver&quot;)) &amp;&amp; Account.RecordType.DeveloperName != &quot;DU_BusinessAccount&quot;) ||
((ISPICKVAL(DU_Role__c, &quot;Service&quot;) || ISPICKVAL(DU_Role__c, &quot;Sales&quot;)) &amp;&amp; Account.RecordType.DeveloperName != &quot;DU_DealerAccount&quot;)</errorConditionFormula>
    <errorDisplayField>DU_Role__c</errorDisplayField>
    <errorMessage>The parent account&apos;s record type is driving which contact roles are allowed.</errorMessage>
</ValidationRule>