force-app/main/default/objects/Contact/validationRules/DU_ContactMustHaveIndividual.validationRule-meta.xml
<ValidationRule>
    <fullName>DU_ContactMustHaveIndividual</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Individual.Id)</errorConditionFormula>
    <errorDisplayField>IndividualId</errorDisplayField>
    <errorMessage>Every Contact record must have an Individual assigned.</errorMessage>
</ValidationRule>