force-app/main/default/objects/Contact/validationRules/ModificationNomParAgentOuManager.validationRule-meta.xml
<ValidationRule>
    <fullName>ModificationNomParAgentOuManager</fullName>
    <active>true</active>
    <description>Cette règle empêche la modification du nom du contact si le profil de l&apos;utilisateur est &quot;Agent&quot; ou &quot;Manager&quot;</description>
    <errorConditionFormula>AND(
OR(ISCHANGED(FirstName),
ISCHANGED(MiddleName),
ISCHANGED(LastName),
ISCHANGED(Salutation),
ISCHANGED(Nom_de_naissance__c),
ISCHANGED(Suffix)
),
OR(
$Profile.Name = &apos;Agent&apos;,
$Profile.Name = &apos;Manager&apos;
)
)</errorConditionFormula>
    <errorMessage>Vos privilèges ne vous permettent pas de modifier ce champ</errorMessage>
</ValidationRule>